[project]
name = "winzy-weather"
version = "0.0.1"
description = "Weather using the excellent wttr.in"
readme = "README.md"
authors = [{name = "Sukhbinder Singh"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "winzy",
]

[project.urls]
Homepage = "https://github.com/sukhbinder/winzy-weather"
Changelog = "https://github.com/sukhbinder/winzy-weather/releases"
Issues = "https://github.com/sukhbinder/winzy-weather/issues"
CI = "https://github.com/sukhbinder/winzy-weather/actions"

[project.entry-points."winzy.plugins"]
weather = "winzy_weather:weather_plugin"


[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
